completing infrastructure for agenda integration